samples/_failures_safe/1761322428_6fdd59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7a4e700.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
